<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BabyCare</string>
    <string name="action_settings">Setting</string>
    <string name="radio_Coklu">Multiple Devices(Baby-Parent)</string>
    <string name="radio_Tekli">Single Device(Baby)</string>
    <string name="btn_Sec">Choose</string>
    <string name="radio_SMS">Alert via SMS</string>
    <string name="radio_Arama">Alert via call</string>
    <string name="label_UyariTuru">Choose alert type:</string>
    <string name="labelTelNo">Phone number to alert:</string>
    <string name="btnBebekBaslat">Start Listening</string>
    <string name="content">Image</string>
    <string name="start_listening">Start Listening</string>     
    <string name="stop_listening">Stop Listening</string>
    <string name= "sms_body">Your baby is awake or something makes noise happened in his/her room, check your baby!</string>
    <string name="ustbaslikBebekDinleme"></string>
    <string name="txt_threshold_bilgi">Please determine the threshold level</string>
    <string name="defaultDecibelValue">100</string>

    <string name="test_button">Test it!</string>

    <string name="toastUyari">Please enter a phone number with at least 10 digits</string>
    <string name="toastSMS">SMS is chosen. Number: </string>
    <string name="toastArama">Call is chosen. Number: </string>
    <string name="toastDinlemeBasla">Listening is started</string>
    <string name="toastDinlemeDurdur">Listening is stopped</string>

    
    

</resources>
