<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/babybackground" >

    <ImageView
        android:id="@+id/imgUstBaslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/babycaretrans" />

    <EditText
        android:id="@+id/txtNumara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/icon_rehber"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="phone" />

    <RadioGroup
        android:id="@+id/radioUyariTuruGrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtBtnBebekBaslat" >

        <RadioButton
            android:id="@+id/radioSMS"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:checked="true"
            android:text="@string/radio_SMS"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@color/text_selector"
            android:textStyle="bold"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/radioArama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="77dp"
            android:text="@string/radio_Arama"
            android:textColor="@color/text_selector"
            android:textStyle="bold"
            android:typeface="serif" />
    </RadioGroup>

    <TextView
        android:id="@+id/OTP_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioUyariTuruGrup"
        android:layout_alignParentLeft="true"
        android:text="@string/label_UyariTuru"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/icon_rehber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/OTP_connection"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/txtNumara"
        android:background="@drawable/contact"
        android:contentDescription="@string/content" />

    <TextView
        android:id="@+id/labelTelNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgUstBaslik"
        android:layout_marginTop="23dp"
        android:text="@string/labelTelNo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtBtnBebekBaslat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/radioUyariTuruGrup"
        android:text="@string/btnBebekBaslat"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnBebekTekBaslat"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_above="@+id/txtBtnBebekBaslat"
        android:layout_marginBottom="18dp"
        android:layout_toLeftOf="@+id/icon_rehber"
        android:background="@drawable/fw"
        android:minWidth="48dp" />

</RelativeLayout>